# learn-cuda

./: .gitignore  CMakeLists.txt  README.md
CooperatingThreads/: 1Dstencil  1Dstencil.cu
HelloWorld/: hello  hello.cu
IMAC/: CMakeLists.txt
IMAC/TP1/: AnswerCheet.md  CMakeLists.txt
IMAC/TP1/Ex1/: CMakeLists.txt  deviceProperties
IMAC/TP1/Ex2/: CMakeLists.txt  addVector
IMAC/TP1/Ex2/src/: main.cu  student.cu
IMAC/TP1/Ex3/: CMakeLists.txt
IMAC/TP1/Ex3/src/: student.cu
IMAC/TP1/Ex4/: CMakeLists.txt  Makefile  main.cu
IMAC/TP1/Ex4/src/: addMatrix.cu
IMAC/TP2/: CMakeLists.txt  Makefile  convolution
IMAC/TP2/include/: convolution.hpp
IMAC/TP2/src/: convolution.cu  student.cu
IMAC/TP3/: CMakeLists.txt  reduce
IMAC/TP3/include/: common.hpp  student.hpp
IMAC/TP3/src/: main.cu  student.cu
IMAC/TP4/include/: student.hpp
IMAC/TP4/src/: student.cu
Jacobi/: error_checks.h
Operations/: addTwoVectors  addition  addition.cu  additionParallel  additionParallelBlocks  additionParallelBlocks.cu  additionParallelThreads
Personal/: CMakeLists.txt
Personal/Array/: CMakeLists.txt  main.cu
Personal/HelloWorld/: CMakeLists.txt  hello.cu
Personal/Jacobi/: jacobi.h
Personal/Operations/: addTwoVectors.cu  additionParallel.cu  additionParallelThreads.cu
Personal/Raytracing/: CMakeLists.txt  README.md
Raytracing/: Makefile  cudart  main.cu  ray.h  vector3.h
Raytracing/include/: hitable.h  hitable_list.h  sphere.h  vector3.h
Udacity/Square/: square  square.cu
